surreal-orm-tests/tests/snapshots/query_ifelse__if_else_statement_and_let_macro.snap
---
source: surreal-orm-tests/tests/query_ifelse.rs
expression: queries_1.to_raw().build()
---
LET $val = 7;

LET $name = 'Oyelowo';

IF $val > 5 THEN
	(SELECT * FROM space_ship ORDER BY name DESC)
ELSE IF $name = 'Oyelowo' THEN
	(SELECT * FROM weapon ORDER BY strength DESC)
ELSE
	2505
END
